--- a/index.html
+++ b/index.html
@@ -2,22 +2,65 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>(at) bakudas ↑ ↑ ↓ ↓ ← → ← → B A</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/7dcb0b779c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
+    <br/>
+
+    <div class="container">
+        <br/>
+        <h2>
+            wilson melo
+            <small class="text-muted">a.k.a bakudas</small>
+        </h2>
+        <h3><small class="text-muted">ux stuff | some art | craft unplayable games</small></h3>
+
+
+        <br/>
+        <p>i like to create things, tell stories and make some friends</p>
+
+        <p>more info: <span class="spinner-border spinner-border-sm" role="status"></span></p>
+
+        <div class="invisible">
+            <p>
+                ############################# (: just looking, ahn guess you want more info drop me a line at bkd(at)estudiovacaroxa.com.br and let's get some chat #############################
+            </p>
+        </div>
+
+        <br/>
+
+        <nav class="nav justify-content-left" style="margin-left: -1em">
+            <a class="nav-item nav-link " href="https://twitter.com/bakudas">twitter</a>
+            <a class="nav-item nav-link " href="https://www.linkedin.com/in/wilsonmelo/">linkedin</a>
+            <a class="nav-item nav-link " href="http://vacaroxa.io">vaca roxa</a>
+            <a class="nav-item nav-link " href="https://bakudas.itch.io/">itch</a>
+            <a class="nav-item nav-link " href="https://vacalabs.itch.io/">labs</a>
+            <a class="nav-item nav-link " href="https://www.behance.net/wmelo">folio</a>
+
+        </nav>
+        <p>made with ♡</p>
+
+
+
+    </div>
+
+
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
 </body>
 
 </html>
