--- a/index.html
+++ b/index.html
@@ -33,34 +33,33 @@
 
         <div class="invisible">
             <p>
-                ############################# (: just looking, ahn guess you want more info drop me a line at bkd(at)estudiovacaroxa.com.br and let's get some chat #############################
+                #### (: Just looking, ahn?! If you want more info about me drop me a line at bkd(at)estudiovacaroxa.com.br and let's get some chat ####
             </p>
         </div>
 
         <br/>
 
         <nav class="nav justify-content-left" style="margin-left: -1em">
+            <a class="nav-item nav-link " href="mailto:bakudas@gmail.com">@</a>
             <a class="nav-item nav-link " href="https://twitter.com/bakudas">twitter</a>
             <a class="nav-item nav-link " href="https://www.linkedin.com/in/wilsonmelo/">linkedin</a>
             <a class="nav-item nav-link " href="http://vacaroxa.io">vaca roxa</a>
             <a class="nav-item nav-link " href="https://bakudas.itch.io/">itch</a>
             <a class="nav-item nav-link " href="https://vacalabs.itch.io/">labs</a>
             <a class="nav-item nav-link " href="https://www.behance.net/wmelo">folio</a>
+            <a class="nav-item nav-link " href="https://apoia.se/vacaroxa">pay me a coffee</a>
 
         </nav>
-        <p>made with ♡</p>
-
-
+        <p>simple, but made with ♡.</p>
 
     </div>
-
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
+    <script src="js/konamicode.js"></script>
 </body>
 
 </html>
